# dims

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: bump_version.yml  lint.yml  test.yml
dims/: config.py  ingest.py  main.py  models.py  output.py
tests/: conftest.py  test_config.py  test_dims.py  test_ingest.py  test_integration.py  test_models.py  test_output.py
tests/test_data/: lander_saturn_20210301_013306.csv  lander_venus_20210301_003124.csv  rocket_saturn_20210301_121033.csv  rocket_venus_20210308_035720.csv
